2002-02-04  Jim Ingham <jingham@apple.com>

	* macosx/tkMacOSXWm.c (Tk_WMStackorderToplevel): crab the Mac
	code for this function, and change it over to work in Carbon.
	* macosx/tkMacOSXMenu.c (tkMacOSXDispatchMenuCommand): Fix a crash
	when a menu command isn't found.
	* macosx/tkMacOSXDraw.c: Preliminary work to use CG for the Tk
	drawing.  There is a compile time switch to turn these on, since they
	don't all work yet: useCGDrawing.  Turn it off for now, unless you 
	want to help make them work.
	
	  TkMacOSXSetUpCGContext: New function - CG equivalent of 
	  TkMacOSXSetupGraphicsPort.
	  TkMacOSXReleaseCGContext: New Function - release the context.
	  XDrawLines, XDrawArcs, XFillPolygons: Use the CG drawing.  These don't
	  all work yet...
        * tkMacOSXDialogs.c (HandleInitialDirectory): Helper function - convert to using
	FSRef's everywhere.
	* Merge with the current TOT.
	
2002-02-03  eric melski  <ericm@interwoven.com>

	* generic/tkImage.c (Tk_ImageObjCmd): Clean up bogus for loop in
	[image inuse] subcommand [Bug #485803].

2002-02-01  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tkCmds.c (Tk_TkObjCmd): don't use 'bool' as an arg as it
	conflicts with the C99 spec. [Bug #511956] (ingham)

2002-02-01  David Gravereaux <davygrvy@pobox.com>

	* win/makefile.vc: unset macro located in the tktest target
	caused a failure to build.  [Bug 511652]

2002-01-30  Don Porter  <dgp@users.sourceforge.net>

	* win/stubs.c (XSetCommand):  Overlooked CONSTification.

2002-02-01  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* doc/photo.n: Documented transparency subcommand.
	* tests/imgPhoto.test (imgPhoto-4.40...imgPhoto-4.68): Tests for
	the transparency subcommand.
	* generic/tkImgPhoto.c (ImgPhotoCmd): Added transparency
	subcommand (see TIP #14.)

2002-01-31  Todd Helfter <tmh@users.sourceforge.net>
	* generic/tkMenu.c (ConfigureMenuCloneEntries)
	* tests/menu.test (menu3.68)
	Correct and test for logic error when cloning menus. [Bug #508988]
