@@ -9,7 +9,7 @@
  * See the file "license.terms" for information on usage and redistribution
  * of this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tkMacOSXMenu.c,v 1.1.2.2 2002/02/05 02:25:17 wolfsuit Exp $
+ * RCS: @(#) $Id: tkMacOSXMenu.c,v 1.1.2.3 2002/02/06 07:02:04 wolfsuit Exp $
  */
 #include "tkMacOSXInt.h"
 #include "tkMenuButton.h"
@@ -642,14 +642,16 @@ TkpDestroyMenu(
     }
     if (menuPtr->platformData != NULL) {
         MenuID menuID;
-	DeleteMenu(menuID=GetMenuID(macMenuHdl));
-	TkMacOSXFreeMenuID(menuID);
-	DisposeMenu(macMenuHdl);
-	ckfree((char *) menuPtr->platformData);
+        menuID = GetMenuID(macMenuHdl);
+        DeleteMenu(menuID);
+        TkMacOSXFreeMenuID(menuID);
+        DisposeMenu(macMenuHdl);
+        ckfree((char *) menuPtr->platformData);
 	menuPtr->platformData = NULL;
     }
 }
-
+
+
 /*
  *----------------------------------------------------------------------
  *
@@ -1363,9 +1365,16 @@ TkpPostMenu(
 	    TkMacOSXHandleTearoffMenu();
 	    result = TCL_OK;
 	}
-	InvalidateMDEFRgns();
-	RecursivelyClearActiveMenu(menuPtr);
-	
+
+        /*
+         * Be careful, here.  The command executed in handling the menu event
+         * could destroy the window.  Don't try to do anything with it then.
+         */
+        
+        if (menuPtr->tkwin) {
+	    InvalidateMDEFRgns();
+	    RecursivelyClearActiveMenu(menuPtr);
+        }
 	inPostMenu--;
     }
     return result;
